# HeatUp

./: .gitignore  01_getting_started.ipynb  01_structure_and_aimd.ipynb  02_analysis.ipynb  02_gibbs_decomposition.ipynb  02_stability_assessment.ipynb  03_anharmonic_analysis.ipynb  03_binary_validation.ipynb  03_literature_validation.ipynb  03_temperature_hull.ipynb  04_literature_validation.ipynb  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
database/Ba/mp-1058581/: POSCAR
database/Ba/mp-10679/: POSCAR
database/Ba/mp-1096835/: POSCAR
database/Ba/mp-1096840/: POSCAR
database/Ba/mp-122/: POSCAR
database/Ba/mp-1977763/: POSCAR
database/Ba/mp-56/: POSCAR
database/Ba/mp-570384/: POSCAR
database/Ba/mp-605790/: POSCAR
database/Ba/mp-639747/: POSCAR
database/BaTiO3/mp-1076932/: POSCAR
database/BaTiO3/mp-19990/: POSCAR
database/BaTiO3/mp-2998/: POSCAR
database/BaTiO3/mp-5020/: POSCAR
database/BaTiO3/mp-504715/: POSCAR
database/BaTiO3/mp-558125/: POSCAR
database/BaTiO3/mp-5777/: POSCAR
database/BaTiO3/mp-5933/: POSCAR
database/BaTiO3/mp-5986/: POSCAR
database/BaTiO3/mp-644497/: POSCAR
database/BaTiO3/mp-995191/: POSCAR
database/O/mp-1009490/: POSCAR
database/O/mp-1023923/: POSCAR
database/O/mp-1056059/: POSCAR
database/O/mp-1056831/: POSCAR
database/O/mp-1057818/: POSCAR
database/O/mp-1058623/: POSCAR
database/O/mp-1065697/: POSCAR
database/O/mp-1066100/: POSCAR
database/O/mp-1087546/: POSCAR
database/O/mp-1102442/: POSCAR
database/O/mp-12957/: POSCAR
docs/notebooks/: 01_getting_started.ipynb  02_gibbs_decomposition.ipynb  03_temperature_hull.ipynb
heatup/: __init__.py  __main__.py  anharmonic_phonons.py  calculator.py  config.py  free_energy.py  manifest.py  md_pipeline.py  md_utils.py  mechanical.py  phonons.py  pipeline.py  plotting.py  structure_pipeline.py  structure_utils.py  thermodynamic.py  vibrational.py
heatup/utils/: __init__.py  plotting_utils.py
input/: stoichiometry_hints.json
paper/: main.tex  references.bib
tests/: conftest.py  test_mechanical.py  test_pipeline.py  test_vibrational.py
thermophasepy/: __init__.py  __main__.py  config.py  free_energy.py  mechanical.py  pipeline.py  plotting.py  thermodynamic.py  vibrational.py
thermophasepy/utils/: __init__.py  plotting_utils.py
(+350 files in other folders)
